Feat: RefreshToken endpoint and service