@@ -13,6 +13,7 @@ import Murilo.Wisch.WischGym.repository.UserRepository;
 import Murilo.Wisch.WischGym.security.jwt.JwtService;
 import Murilo.Wisch.WischGym.service.NotificacaoService;
 import Murilo.Wisch.WischGym.service.RefreshTokenService;
+import jakarta.transaction.Transactional;
 import jakarta.validation.ConstraintViolation;
 import jakarta.validation.Valid;
 import jakarta.validation.Validator;
@@ -34,6 +35,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @RestController
 @RequestMapping("/auth")
@@ -49,6 +51,7 @@ public class AuthController {
     private final PlanoRepository planoRepository;
     private final NotificacaoService notificacaoService;
     private final EmailDomainValidator emailDomainValidator;
+    private final Validator validator;
 
 
 
@@ -69,6 +72,7 @@ public class AuthController {
         if (user.getRoles() == null || user.getRoles().isEmpty()) {
             throw new IllegalStateException("Usuário sem role definida");
         }
+
 
         List<String> roles = user.getRoles()
                 .stream()
@@ -95,28 +99,57 @@ public class AuthController {
         );
     }
 
-    @Autowired
-    private Validator validator;
-
     @PostMapping("/registro")
-    public ResponseEntity<?> registro(@RequestBody RegistroRequest request) {
+    @Transactional
+    public ResponseEntity<AuthResponse> registro(@RequestBody RegistroRequest request) {
+
+        if (request.getTipo() == Roles.ADMIN) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN,
+                    "Não é permitido criar conta admin por este endpoint.");
+        }
 
         if (!emailDomainValidator.isDominioValido(request.getEmail())) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Email inválido. Use um email real.");
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
+                    "Email inválido. Use um email real.");
         }
 
         if (userRepository.findByEmail(request.getEmail()).isPresent()) {
-            throw new RuntimeException("Email já cadastrado");
+            throw new ResponseStatusException(HttpStatus.CONFLICT,
+                    "Email já cadastrado.");
         }
 
         if (request.getTipo() == Roles.PROFESSOR &&
                 (request.getCref() == null || request.getCref().isBlank())) {
-            throw new RuntimeException("CREF é obrigatório para professores");
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
+                    "CREF é obrigatório para professores.");
         }
 
         if (request.getTipo() == Roles.ALUNO &&
                 (request.getCpf() == null || request.getCpf().isBlank())) {
-            throw new RuntimeException("CPF é obrigatório para alunos");
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
+                    "CPF é obrigatório para alunos.");
+        }
+
+        if (request.getTipo() == Roles.ALUNO) {
+            Aluno alunoParaValidar = Aluno.builder()
+                    .nome(request.getNome())
+                    .cpf(request.getCpf())
+                    .email(request.getEmail())
+                    .dataNascimento(request.getDataNascimento())
+                    .peso(request.getPeso())
+                    .altura(request.getAltura())
+                    .objetivo(request.getObjetivo())
+                    .build();
+
+            Set<ConstraintViolation<Aluno>> violations = validator.validate(alunoParaValidar);
+            if (!violations.isEmpty()) {
+                List<String> erros = violations.stream()
+                        .map(ConstraintViolation::getMessage)
+                        .sorted()
+                        .toList();
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
+                        String.join(", ", erros));
+            }
         }
 
         User user = User.builder()
@@ -146,51 +179,56 @@ public class AuthController {
                         .ifPresent(aluno::setPlano);
             }
 
-            Set<ConstraintViolation<Aluno>> violations = validator.validate(aluno);
-            if (!violations.isEmpty()) {
-                List<String> erros = violations.stream()
-                        .map(ConstraintViolation::getMessage)
-                        .toList();
-                return ResponseEntity.badRequest().body(erros);
-            }
-
             alunoRepository.save(aluno);
 
-            userRepository.findByRolesContaining(Roles.ADMIN).forEach(admin ->
-                    notificacaoService.criar(
-                            admin,
-                            TipoNotificacao.NOVO_ALUNO,
-                            "Novo aluno cadastrado",
-                            "O aluno " + request.getNome() + " acabou de se cadastrar na plataforma."
-                    )
-            );
-
-            userRepository.findByRolesContaining(Roles.PROFESSOR).forEach(professor ->
-                    notificacaoService.criar(
-                            professor,
-                            TipoNotificacao.NOVO_ALUNO,
-                            "Novo aluno cadastrado",
-                            "O aluno " + request.getNome() + " acabou de se cadastrar na plataforma."
-                    )
-            );
+            notificarAdminsEProfessores(request.getNome());
         }
 
         List<String> rolesList = user.getRoles().stream()
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
 
         String accessToken = jwtService.generateToken(user.getEmail(), rolesList, user.getId());
         RefreshToken refreshToken = refreshTokenService.createRefreshToken(user);
+        UserResponse userResponse = new UserResponse(user.getId(), user.getEmail(), new HashSet<>(rolesList));
 
-        Set<String> roles = user.getRoles().stream()
+        return ResponseEntity.status(HttpStatus.CREATED)
+                .body(new AuthResponse(accessToken, refreshToken.getToken(), userResponse));
+    }
+
+
+    private void notificarAdminsEProfessores(String nomeAluno) {
+        String titulo = "Novo aluno cadastrado";
+        String mensagem = "O aluno " + nomeAluno + " acabou de se cadastrar na plataforma.";
+
+        Stream.concat(
+                userRepository.findByRolesContaining(Roles.ADMIN).stream(),
+                userRepository.findByRolesContaining(Roles.PROFESSOR).stream()
+        ).forEach(destinatario ->
+                notificacaoService.criar(destinatario, TipoNotificacao.NOVO_ALUNO, titulo, mensagem)
+        );
+    }
+
+    @PostMapping("/refresh")
+    public ResponseEntity<AuthResponse> refresh(@RequestBody RefreshRequest request) {
+        RefreshToken novoRefreshToken = refreshTokenService.validarERotacionar(request.refreshToken());
+
+        User user = novoRefreshToken.getUser();
+
+        List<String> rolesList = user.getRoles().stream()
                 .map(Enum::name)
-                .collect(Collectors.toSet());
+                .toList();
 
-        UserResponse userResponse = new UserResponse(user.getId(), user.getEmail(), roles);
+        String accessToken = jwtService.generateToken(user.getEmail(), rolesList, user.getId());
+        UserResponse userResponse = new UserResponse(
+                user.getId(),
+                user.getEmail(),
+                new HashSet<>(rolesList)
+        );
 
         return ResponseEntity.ok(new AuthResponse(
                 accessToken,
-                refreshToken.getToken(),
+                novoRefreshToken.getToken(),
                 userResponse
         ));
     }
